# AgenticRAG-Sustainability

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
config/: settings.py
deploy/: modal_chandra.py  probe_chandra.py
scripts/: probe_chandra.py  probe_retrieval.py
src/agentic_rag/: __init__.py  citations.py  cli.py  llm.py  orchestrator.py  pdf_preview.py  pdf_report.py  query_log.py  schemas.py
src/agentic_rag/agents/: composite_extractor.py  composite_vlm_verifier.py  critic.py  planner.py  prompts.py  synthesizer.py  table_extractor.py  table_vlm_verifier.py
src/agentic_rag/embeddings/: dense.py
src/agentic_rag/ingestion/: chandra_client.py  metadata.py  pipeline.py  vlm_extractor.py
src/agentic_rag/retrieval/: bm25.py  hybrid.py  reranker.py
src/agentic_rag/vectordb/: qdrant.py
