[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agentic RAG for sustainability reports (BRSR, GRI, SASB, TCFD, IR)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",         # used against Fireworks's OpenAI-compatible endpoint
    "qdrant-client>=1.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.5.0",
    "pypdfium2>=4.30.0",
    "streamlit>=1.36.0",
    "pandas>=2.2.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
arag = "agentic_rag.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
